@@ -1,3 +1,8 @@
+2005-10-18  Jie Zhang  <jie.zhang@analog.com>
+
+	* bfin-dis.c (print_insn_bfin): Do proper endian transform when
+	reading instruction from memory.
+
 2005-10-18  Nick Clifton  <nickc@redhat.com>
 
 	* m32r-asm.c: Regenerate after updating m32r.opc.
